k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: quickart
spec:
  selector:
    app: order-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
