k8s/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: quickart
spec:
  selector:
    app: product-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
