k8s/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: quickart
spec:
  selector:
    app: user-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
